--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 					><span class="glow-line"></span><span class="glow-line"></span>
 				</div>
 			</div>
+
+			<div class="effect2">
+				<div data-text="2" style="--clr: #1da1f2"><b>2</b></div>
+				<div data-text="0" style="--clr: #fffc00"><b>0</b></div>
+				<div data-text="2" style="--clr: #ff1359"><b>2</b></div>
+				<div data-text="3" style="--clr: #25d366"><b>2</b></div>
+			</div>
 		</div>
 	</body>
 </html>
