add effect3 (focus)
focus text

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 				<div data-text="2" style="--clr: #ff1359"><b>2</b></div>
 				<div data-text="3" style="--clr: #25d366"><b>2</b></div>
 			</div>
+
+			<div class="effect3">
+				<h1>
+					<span><span>F</span></span>
+					<span><span>O</span></span>
+					<span><span>C</span></span>
+					<span><span>U</span></span>
+					<span><span>S</span></span>
+				</h1>
+			</div>
 		</div>
 	</body>
 </html>
