Add effect4 broke image animation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
 					<span><span>S</span></span>
 				</h1>
 			</div>
+
+			<div class="effect4 broke-image">
+				<div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
